# sweetiepy

./: LICENSE  README.md  pyproject.toml
scripts/: usage_example.py
src/: connect_mongodb.py
src/data/: device_status_repository.py  glucose_readings_repository.py  mongo_connection.py  profile_repository.py  treatments_repository.py  utils.py
src/sweetiepy/: connect_mongodb.py
src/sweetiepy/data/: device_status_repository.py  glucose_readings_repository.py  profile_repository.py  treatments_repository.py
tests/: test_mongo_connection.py
