[project]
name = "sweetiepy"
version = "0.1.0"
description = "A library for accessing DIY loop data from a MongoDB database"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

dependencies = [
    "pymongo>=4.10.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

license = "MIT"
license-files = ["LICENCE"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
